# survival

./: .gitignore  .gitmodules  Cargo.toml
ai/: Cargo.toml
ai/src/: components.rs  lib.rs  pathing.rs
ai/src/behavior/: considerations.rs  mod.rs  planner.rs  utility.rs
assets/: Cargo.toml  build.rs
body/: Cargo.toml
body/benches/: body_benchmarks.rs
body/src/: bundle.rs  inventory.rs  lib.rs
body/src/systems/: item_sprites.rs  mod.rs
core/: Cargo.toml
core/src/: bitflags_serial.rs  clock.rs  component_event_reader.rs  components.rs  embark.rs  fsm.rs  initializers.rs  input.rs  lib.rs  settings.rs  utils.rs
core/src/defs/: action.rs  body.rs  building.rs  creature.rs  digestion.rs  foliage.rs  item.rs  material.rs  mod.rs  property.rs  psyche.rs  race.rs  reaction.rs  sprites.rs
core/src/tiles/: mod.rs  region.rs  world.rs
map/: Cargo.toml
map/src/: lib.rs
map/src/region/: mod.rs  random.rs
map/src/utils/: mod.rs
map/src/world/: mod.rs
psyche/: Cargo.toml
psyche/src/: components.rs  lib.rs
psyche/src/systems/: mod.rs
resources/: display_config.ron  input.ron
resources/assets/: buildings.ron
resources/assets/spritesheets/: Kelora_16x16.ron  cp437_20x20.ron
resources/assets/ui/: fps.ron  test_region.ron  worldgen.ron
resources/defs/: buildings.ron  creatures.ron  digestion.ron  foliage.ron  items.ron  materials.ron  psyche.ron  races.ron  reactions.ron
resources/defs/actions/: actions.ron
resources/defs/bodies/: humanoid.ron
resources/defs/materials/: bone.ron  skin.ron  stone_template.ron  tissue.ron
resources/defs/reactions/: wood.ron
src/: components.rs  game.rs  initializers.rs  lib.rs  loaders.rs
src/debug/ui/: buildings.rs  mod.rs  objects.rs  pawn.rs  work.rs
src/renderer/: mod.rs  sprites.rs
src/renderer/shaders/: sprites.frag  sprites.vert
src/states/: choose_test.rs  loading.rs  mod.rs  test_region.rs  worldgen.rs
src/systems/: mod.rs  movement.rs  pawn_pickup.rs  reactions.rs  tiles.rs
src/systems/input/: mod.rs  placement.rs  selection.rs
src/systems/world_view/: mod.rs
src/ui/: embark.rs  mod.rs
survival_derive/: Cargo.toml
survival_derive/src/: lib.rs
