[package]
name = "assets"
version = "0.1.0"
authors = ["jaynus <jaynus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
image = "0.22"
ron = { git = "https://github.com/ron-rs/ron.git" }
amethyst = { path = "../../amethyst", default-features = false, features = ["nightly", "animation", "audio", "locale", "renderer", "saveload", "vulkan", "gltf", "experimental-spirv-reflection", "shader-compiler", "tiles"] }