[package]
name = "map"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

[dependencies]
core = { path = "../core" }
serde = { version = "1.0", features = ["derive", "rc"] }
strum = "0.15"
strum_macros = "0.15"
log = { version = "0.4.6", features = ["serde"] }
failure = "0.1"
serde_cbor = "0.10"
bitflags = "*"

image = "0.22"
imageproc = "0.19"
rayon = "1.1"
itertools = "0.8"

noise = "0.5"
sha2 = "0.8"

pathfinding = "1.1"

worldgen = { path = "../external/worldgen" }

[dev-dependencies]
criterion = "0.2"
env_logger = "0.6"

