[package]
name = "survival_derive"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "0.15" }
quote = "0.6"
proc-macro2 = "0.4"

[lib]
name = "survival_derive"
proc-macro = true
